# equivariant-posteriors

./: .gitignore  README.md  alvis.sh  analyze.py  bash_singularity.sh  data_reqs.txt  env.example.py  env.py  env_local.py  flake.nix  flake_darwin.nix  generate_flatbuffers.py  list_checkpoints.py  main.py  oom_snapshot_new.pickle  plot.py  plots.py  postgres  pyproject.toml  run.py  run.sh  run_cpu.sh  run_multi.sh  run_pdb.sh  run_slurm.py  run_slurm_sweep.py  run_sweep.py  setup.py  slurm_run_single.sh  spiral.py  srun_array  srun_array.sh  srun_single  srun_single.sh  srun_single_debug.sh  start_distributed_trainers.sh  start_postgres.sh  test.py
.github/workflows/: main.yml
.helix/: config.toml  languages.toml
experiments/artifact_test/: flatbuffer.py  main.py
experiments/attention_only/: spiral.py
experiments/cable/: test_model.py
experiments/clifford/: clifford.py  clifford_110_blades.json  clifford_110_structure.npz  clifford_algebra.ipynb
experiments/climate/: climateset_data.py  climset_hp_test.ipynb  datahandlingsingle.py  evalutate_climate.py  hp_whole_set.ipynb  metrics.py  swinhp_climateset_test.ipynb
experiments/embed_d/: spiral_embed_d.py
experiments/layers/: layers.py
experiments/looking_at_the_posterior/: acc_correlation.py  al.py  al.r  al_aquisition.py  al_cifar.r  al_cifar_balanced_unaug.r  al_cifar_unbalanced.r  al_cifar_unbalanced_unaug.r  al_config.py  cifar.py  config.py  conv_cifar.py  mlp_cifar.py  old_plots.r  plots.r  swin_cifar.py  uq.py
experiments/lora_ensembles/: data.py  distributed_trainer.py  evaluate.py  generative_llm_losses.py  hf_env.sh  lora_ensemble.py  lora_inference.py  metrics.py  model.py
experiments/lyaponov/: mnist.py  models.py
experiments/lyapunov/: mnist.py  models.py
experiments/lyapunov2/: cifar.py  cifar_2_conv.py  cifar_2_resnet.py  cifar_conv.py  cifar_conv_deep.py  cifar_resnet.py  cifar_resnet_deep.py  main.py  mnist.py  mnist_2.py  rplot.py  separated.py  separated_class.py  separated_ludvig_baseline.py
experiments/meta/: model1.py
experiments/mlp/: spiral.py
experiments/mlp_dim/: spiral_mlp_dim.py
experiments/mnist/: dense.py  sweep_dense.py
experiments/uncertainty/: spiral.py
experiments/weather/: README.md  acc_and_rmse_iterated.ipynb  cdsmontly.py  cdstest.py  climatology_wb2.py  data.py  data_analysis.ipynb  debug_datahp_artifact.py  debug_nside_256.py  download_lite.py  download_lite_eval.py  download_lite_hourly.py  eval_all_weather.py  eval_weatherbench2.py  evaluate.py  evaluate_all_checkpoints.py  evaluate_nside_256.py  evaluate_pangu_256.py  hydrate_dataset_cache.py  inference_time.py  inspect_output.py  metrics.py  nside64.ipynb  parameter_counts.py  plot_wb2_results.py  ring_windows.ipynb  run_inference_time.sh  spatial_rmse_save.py  sweep_param_count.py  test_model.py  train_nside_256.py  train_pangu_nside256.py  wb2.py  weatherbench2.ipynb
experiments/weather_pear/: acc_and_rmse_table.py
experiments/x86extractor/: dataloader.py  eval.py  extract.py  mlp.py  mlp_big.py  mlp_elf_and_pe.py  transformer.py  transformer_pe.py
flatbuffers/: npy.fbs
ingestion/: backfill_epoch_metrics.sql  ingest.py
lib/: ablation.py  analytics_config.py  checkpoint_step.py  classification_metrics.py  compute_env.py  compute_env_config.py  data.py  data_factory.py  data_registry.py  data_utils.py  dataspec.py  ddp.py  distributed_trainer.py  ensemble.py  export.py  export_parquet.py  files.py  generic_ablation.py  git.py  gpu_monitor.py  lock.py  log.py  lyapunov.py  metric.py  model.py  model_factory.py  paths.py  random_util.py  regression_metrics.py  render_dataframe.py  render_duck.py  render_psql.py  serialization.py  serialize_human.py  slurm.py  stable_hash.py  staging_filesystem.py  test_utils.py  timing_metric.py  train.py  (+5 more)
lib/datasets/: cifar.py  cifar_2.py  cifar_c.py  cifar_visualization.py  commonsense_qa.py  join.py  mnist.py  mnist_2.py  mnist_visualization.py  sine.py  spiral.py  spiral_visualization.py  subset.py  uniform.py
lib/flatbuffers/: ArraySpec.py  Component.py  Dimension.py  NPY.py
lib/models/: conv.py  conv_lap.py  conv_small.py  dense.py  llama2generative.py  mlp.py  mlp_proj.py  resnet.py  swin_transformer_v2.py  transformer.py
physicsnemo/: __init__.py  conftest.py
physicsnemo/active_learning/: README.md  __init__.py  _registry.py  config.py  driver.py  logger.py  loop.py  protocols.py
physicsnemo/compat/: __init__.py
r/: embed_d.r  lyapunov2.r  mlp_dim.r  uncertainty.r  uncertainty_lyaponov.r
rust/vis/: Cargo.toml  db.sh  flake.nix  generate_hp_tables.py  glsl_to_spirv.sh  hpshader.fragment.spv  hpshader.vertex.spv  todo.md
rust/vis/src/: era5.rs  hpshader.glsl  main.rs  np.rs
rust/vis/src/flatbuffers/: npy_generated.rs
scripts/: start_postgres.sh  update_cachix.sh
test/: conftest.py  test_checkpoint_loading.py  test_checkpoint_step.py  test_distributed_training.py  test_duck.py  test_fengwu_physicsnemo.py  test_filesystem_staging.py  test_graphcast_physicsnemo.py  test_ingestion.py  test_instantiate_from_json.py  test_s3_export.py  test_serialization_callables.py
(+777 files in other folders)
