[package]
name = "vis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cdshealpix = "0.6.6"
chrono = "0.4.31"
clap = "4.4.11"
colorous = "1.0.12"
dotenvy = "0.15.7"
eframe = "0.24.1"
egui = "0.24.1"
egui_extras = {version="0.24.2", features=["all_loaders"]}
egui_plot = "0.24.1"
flamegraph = "0.6.4"
image = {version="0.24.7", features=["png"]}
itertools = "0.12.0"
ndarray = "0.15.6"
ndarray-stats = "0.5.1"
npyz = "0.8.2"
serde_json = "1.0.108"
sqlx = { version="0.7.3" , features = [ "runtime-tokio", "postgres", "chrono" ]}
sqlx-cli = "0.7.3"
tokio = { version = "1.34.0", features = ["rt", "macros"]}
profiling = {version = "*", features=["profile-with-tracy"]}
console-subscriber = "0.2.0"
tracy-client = "0.16.4"
