[package]
name = "vis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cdshealpix = "0.6.6"
chrono = "0.4.31"
clap = "4.4.11"
colorous = "1.0.12"
dotenvy = "0.15.7"
# eframe = "*"
wgpu = { version = "0.19.0", features = ["spirv"] }
eframe = { version = "0.26.2", features = ["wgpu", 
     # "accesskit",
    "default_fonts",
    "wayland",
    "web_screen_reader",
    # "winit",
    # "winit/default",
    "x11",
], default-features = false}
winit = { version = "*", features = ["default"]}
egui = "0.26.2"
egui_extras = {version="*", features=["all_loaders"]}
egui_plot = "*"
flamegraph = "0.6.4"
image = {version="*", features=["png"]}
itertools = "0.12.0"
ndarray = "0.15.6"
ndarray-stats = "0.5.1"
npyz = "0.8.2"
serde_json = "1.0.108"
sqlx = { version="0.7.3" , features = [ "runtime-tokio", "postgres", "chrono" ]}
sqlx-cli = "0.7.3"
tokio = { version = "1.34.0", features = ["rt", "macros"]}
glsl-layout = "0.5.0"

# profiling = {version = "*", features=["profile-with-tracy"]}
# console-subscriber = "0.2.0"
# tracy-client = "0.16.4"
