[package]
name = "vis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cdshealpix = "0.6.6"
chrono = "0.4.31"
clap = "4.4.11"
colorous = "1.0.12"
dotenvy = "0.15.7"
# eframe = "*"
wgpu = { version = "24.0.1", features = ["spirv"] }
eframe = { version = "0.31.0", features = ["wgpu", 
     # "accesskit",
    "default_fonts",
    "wayland",
    "web_screen_reader",
    # "winit",
    # "winit/default",
    "x11",
], default-features = false}
winit = { version = "*", features = ["default"]}
egui = "0.31.0"
egui_extras = {version="0.31.0", features=["all_loaders"]}
egui_plot = "0.31.0"
flamegraph = "0.6.4"
image = {version="*", features=["png"]}
itertools = "0.12.0"
ndarray = "0.15.6"
ndarray-stats = "0.5.1"
npyz = "0.8.2"
serde_json = "*"
sqlx = { version="0.7.3" , features = [ "runtime-tokio", "postgres", "chrono" ]}
sqlx-cli = "0.7.3"
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros"]}
glsl-layout = "0.5.0"
capnp = "0.19.3"
flatbuffers = "23.5.26"
# duckdb = { version="0.10.2", features=["polars"] }
duckdb = {git = "https://github.com/duckdb/duckdb-rs", features=["polars", "r2d2"]}
# duckdb = {git = "https://github.com/Maxxen/duckdb-rs", branch="v1.3.0-dev",  features=["polars", "r2d2"]}
r2d2 = "0.8.9"
# r2d2-duckdb = "0.1.0"
# r2d2 = "0.8.10"
polars = {version="0.46.0", features=["lazy", "rolling_window", "polars-io", "json", "timezones"]}
# polars-core = "*"
serde = {version="1.0.209", features=["derive"]}
ron = "0.8.1"

# profiling = {version = "*", features=["profile-with-tracy"]}
tracing = "0.1.40"
tracing-tracy = "0.11.1"
tracing-subscriber = "0.3.18"
egui_file = "0.22.0"
egui_code_editor = "0.2.9"
sqlformat = "0.2.6"
tracy-client = "0.18.0"
jemallocator = { version = "0.5.4", features = ["profiling"] }
jemalloc-ctl = "0.5.4"
# console-subscriber = "0.2.0"
# tracy-client = "0.16.4"
